css/nicemenus_override.css
/* override 'nice menus' module css 

ul.nice-menu,
ul.nice-menu a,
ul.nice-menu ul,
ul.nice-menu li,
ul.nice-menu-down,
ul.nice-menu-down ul,
ul.nice-menu-down li,
ul.nice-menu li.menuparent,
ul.nice-menu li.menuparent a,
ul.nice-menu li.menuparent a:hover,
ul.nice-menu li.menuparent:hover,
ul.nice-menu li.menuparent:hover a{
    border: 0;
    padding:0;
    margin: 0;
    background-color: transparent;
    background-image: none;
    
}
*/

ul.nice-menu {
    border: 0;
    background-color: none;
    margin-left: 30px;
}

ul.nice-menu li {
    border: 0;
    border-top-width: 0;
    margin-right: 4px;
    border-top-left-radius: 10px; 
    border-top-right-radius: 10px;
    -webkit-border-top-left-radius: 10px;
    -webkit-border-top-right-radius: 10px;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-topright: 10px;
}

ul.nice-menu li a {
    border: 0;
    border-top-width: 0;
    color: #000;
    font-size: 0.8em;
    line-height: 1.6em;
    padding-left: 12px;
    padding-right: 12px;
    text-decoration: none;
    border-top-left-radius: 10px; 
    border-top-right-radius: 10px;
    -webkit-border-top-left-radius: 10px;
    -webkit-border-top-right-radius: 10px;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-topright: 10px;
}

ul.nice-menu .menuparent li a {
    background: #9dd8db; 
    border-top-left-radius: 0; 
    border-top-right-radius: 0;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 0;
}

ul.nice-menu .menuparent li {
    background: #9dd8db; 
    border-top-left-radius: 0; 
    border-top-right-radius: 0;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 0;
}

ul.nice-menu ul {
    border: 0;
    border-top-width: 0;
}

ul.nice-menu ul li {
    width: 20em;
}

ul.nice-menu li a.active {
    color: #000;
    background-color: #fff;
}

ul.nice-menu li a:hover {
    border: 0;
    color: #fff;
}

ul.nice-menu-down li.menuparent {
    background: #e2eadb url("../images/arrow-down.png") right center no-repeat;
}

ul.nice-menu-down li.menuparent {
    background: #e2eadb url("../images/arrow-down.png") right center no-repeat;
}

ul.nice-menu-down li.menuparent:hover {
    background: #6AA5A8 url("../images/arrow-down.png") right center no-repeat;
}

ul.nice-menu-down li {
    background: #e2eadb;
}

ul.nice-menu-down li {
    background: #e2eadb;
}

ul.nice-menu-down li:hover {
    background: #6aa5a8;
}

ul.nice-menu-down li li {
    background: #e2eadb;
}

